--- a/HTML/Diseases/Huntington.html
+++ b/HTML/Diseases/Huntington.html
@@ -65,7 +65,7 @@
         <p>
           Huntington disease (HD) is an inherited condition that causes progressive degeneration of neurons in the brain. Signs and symptoms usually develop between ages 35 to 44 years and may include uncontrolled movements, loss of intellectual abilities, and various emotional and psychiatric problems. People with HD usually live for about 15 to 20 years after the condition begins. It is caused by changes (mutations) in the HTT gene and is inherited in an autosomal dominant manner. This means that having a change (mutation) in only one of the 2 copies of the HTT gene is enough to cause the condition. When a person with HD has children, each child has a 50% (1 in 2) chance to inherit the mutated gene and develop the condition. </p>
         <p>
-          Treatment is based on the symptoms present in each person and may include various medications.<span class="refbig"><a href="#ref-one">[1]</a></span><span class="reflittle"><a href="#ref-one-little">[1]</a></span>
+          Treatment is based on the symptoms present in each person and may include various medications<span class="refbig"><a href="#ref-one">[1]</a></span><span class="reflittle"><a href="#ref-one-little">[1]</a></span>.</p>
       </div>
     </section>
     <section class="scrollspy" spy-title="First described">
@@ -96,7 +96,7 @@
         <div class="gene-section">
           <h2> Gene Affected</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam error, voluptatum inventore in ipsum repellendus sequi quis possimus soluta rem quae assumenda vitae, temporibus odio ipsam praesentium sapiente eius magnam.
+            Lorem ipsum dolor sit amet<span class="refbig"><a href="#ref-two">[2]</a></span><span class="reflittle"><a href="#ref-two-little">[2]</a></span>, consectetur adipisicing elit. Ullam error, voluptatum inventore in ipsum repellendus sequi quis possimus soluta rem quae assumenda vitae, temporibus odio ipsam praesentium sapiente eius magnam.
           </p>
         </div>
     </section>
@@ -119,7 +119,7 @@
       <div class="patho-section">
         <h2> Pathophysiology</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam error, voluptatum inventore in ipsum repellendus sequi quis possimus soluta rem quae assumenda vitae, temporibus odio ipsam praesentium sapiente eius magnam.
+          Lorem ipsum dolor sit amet<span class="refbig"><a href="#ref-eight">[3]</a></span><span class="reflittle"><a href="#ref-eight-little">[1]</a></span>, consectetur adipisicing elit. Ullam error, voluptatum inventore in ipsum repellendus sequi quis possimus soluta rem quae assumenda vitae, temporibus odio ipsam praesentium sapiente eius magnam.
         </p>
       </div>
     </section>
@@ -131,12 +131,12 @@
         </p>
       </div>
     </section>
-    <section class="scrollspy" spy-title="References">
+    <section class="scrollspy" spy-title="References" id="references">
       <div class="reference-section">
         <h2> References </h2>
         <ol>
           <li><a id="ref-one-little" class="articlebottom">T. Pringsheim, K. Wiltshire, L. Day, J. Dykeman, T. Steeves, and N. Jette, “The incidence and prevalence of Huntington’s disease: a systematic review and meta-analysis,” Mov. Disord., vol. 27, no. 9, pp. 1083–1091, Aug. 2012.</a> &nbsp<a href="https://pubmed.ncbi.nlm.nih.gov/22692795/" class="links">[PUBMED]</a></li>
-          <li></li>
+          <li><a id="ref-two-little" class="articlebottom"></a></li>
           <li></li>
           <li></li>
           <li></li>
@@ -149,24 +149,24 @@
       </div>
     </section>
     </div>
-    <div class="aside-bar-right">
+    <div class="aside-bar-right" id="bar-right">
       <div class="ref-side-bar">
         <h3><i class="fa-solid fa-link"></i> References</h3>
         <ul>
-          <li><a href="#" id="ref-one" class="articlefocus">T. Pringsheim, K. Wiltshire, L. Day, J. Dykeman, T. Steeves, and N. Jette, “The incidence and prevalence of Huntington’s disease: a systematic review and meta-analysis,” Mov. Disord., vol. 27, no. 9, pp. 1083–1091, Aug. 2012.</a> &nbsp<a href="https://pubmed.ncbi.nlm.nih.gov/22692795/" class="links">[PUBMED]</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint reiciendis repudiandae praesentium aliquam, ducimus incidunt accusamus nobis voluptas pariatur maxime quaerat ea ab similique, accusantium molestias aliquid dolor nulla facere!</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem non voluptas minus nam autem, iure maxime, numquam alias deserunt odio dicta similique ipsum accusantium nostrum eligendi, facere rem dolore at!</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam omnis voluptates, consequatur, eius doloremque ducimus tempore ipsam eaque provident porro autem. Neque adipisci rem commodi deserunt fuga nesciunt quasi est?</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ad aspernatur placeat temporibus maiores non aut, deleniti architecto nostrum praesentium minus hic in provident autem id eveniet quidem ut dicta.</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore perferendis mollitia placeat reprehenderit culpa maxime, sequi, vero sed commodi eveniet atque rerum quas magni quam consequuntur id iure neque soluta.</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam sed fugit neque porro, rem necessitatibus quisquam dolorem aperiam non fuga tempora amet maiores, tenetur, officiis sapiente deserunt voluptates aut doloribus?</a></li>
-          <li><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, iure? Repellat corrupti nostrum velit quia placeat consequatur, inventore ratione fugit eveniet soluta et ad, molestias, quidem aliquam consectetur cumque vel.</a></li>
+          <li><a href="" id="ref-one" class="articlefocus">T. Pringsheim, K. Wiltshire, L. Day, J. Dykeman, T. Steeves, and N. Jette, “The incidence and prevalence of Huntington’s disease: a systematic review and meta-analysis,” Mov. Disord., vol. 27, no. 9, pp. 1083–1091, Aug. 2012.</a> &nbsp<a href="https://pubmed.ncbi.nlm.nih.gov/22692795/" class="links">[PUBMED]</a></li>
+          <li><a href="" id="ref-two" class="articlefocus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint reiciendis repudiandae praesentium aliquam, ducimus incidunt accusamus nobis voluptas pariatur maxime quaerat ea ab similique, accusantium molestias aliquid dolor nulla facere!</a></li>
+          <li><a href="" id="ref-three" class="articlefocus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem non voluptas minus nam autem, iure maxime, numquam alias deserunt odio dicta similique ipsum accusantium nostrum eligendi, facere rem dolore at!</a></li>
+          <li><a href="" id="ref-four" class="articlefocus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam omnis voluptates, consequatur, eius doloremque ducimus tempore ipsam eaque provident porro autem. Neque adipisci rem commodi deserunt fuga nesciunt quasi est?</a></li>
+          <li><a href="" id="ref-five" class="articlefocus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ad aspernatur placeat temporibus maiores non aut, deleniti architecto nostrum praesentium minus hic in provident autem id eveniet quidem ut dicta.</a></li>
+          <li><a href="" id="ref-six" class="articlefocus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore perferendis mollitia placeat reprehenderit culpa maxime, sequi, vero sed commodi eveniet atque rerum quas magni quam consequuntur id iure neque soluta.</a></li>
+          <li><a href="" id="ref-seven" class="articlefocus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam sed fugit neque porro, rem necessitatibus quisquam dolorem aperiam non fuga tempora amet maiores, tenetur, officiis sapiente deserunt voluptates aut doloribus?</a></li>
+          <li><a href="" id="ref-eight" class="articlefocus">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, iure? Repellat corrupti nostrum velit quia placeat consequatur, inventore ratione fugit eveniet soluta et ad, molestias, quidem aliquam consectetur cumque vel.</a></li>
 
         </ul>
       </div>
     </div>
   </main>
-  <footer>
+  <footer id=footer>
     <div class="collumns">
       <div class="first-third">
         <ul>
@@ -272,10 +272,21 @@ window.onclick = function(event) {
   }
 }
 
-function refLittle(){
+</script>
+<script>
 
+$(document).scroll(function() {
+    checkOffset();
+});
+
+function checkOffset() {
+    if($('#bar-right').offset().top + $('#bar-right').height() >= $('#references').offset().top + 200)
+        $('#bar-right').hide(800);
+    if($(document).scrollTop() + window.innerHeight < $('#references').offset().top + 200)
+        $('#bar-right').show(800); // restore when you scroll up
 }
 </script>
+
 
 </body>
 
