--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="../CSS/contact_style.css">
+    <link rel="shortcut icon" href="../Images/image.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
@@ -33,7 +34,7 @@
       <div class="contact-info">
         <div> <i class="fas fa-map-marker-alt"></i><a class="link-map" href="https://www.google.com/maps/place/FMCB+-+Faculdade+de+Medicina+e+Ci%C3%AAncias+Biom%C3%A9dicas/@37.0432312,-7.9719514,17.5z/data=!4m8!1m2!2m1!1sualg+campus+de+gambelas!3m4!1s0x0:0x16208f00e7acab03!8m2!3d37.0450599!4d-7.9709448">8005-139 Faro, Gambelas, Portugal</a> </div>
         <div> <i class="fas fa-envelope"></i>Contact directly via mail:  </div>
-        <div> &nbsp&nbsp&nbsp&nbsp&nbsp<i class="fa-solid fa-angle-right"></i> email_example@gmail.com  </div>
+        <div> &nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:poly@mail.com"><i class="fa-solid fa-angle-right"></i> poly@mail.com </a> </div>
         <div> <i class="fa-solid fa-user"></i>Social Media:</div>
         <div> <i class="fa-brands fa-facebook-square"></i><i class="fa-brands fa-twitter-square"></i><i class="fa-brands fa-linkedin"></i></div>
       </div>
