--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title> Polyglutamine Disorders - Database</title>
+		<link rel="shortcut icon" href="Images/image.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +15,7 @@
   <body>
     <section class="header">
       <nav>
-        <a href="home.html"> <img class="poly-q" src="Images/image.png"> </a>
+        <a href="html/home.html"> <img class="poly-q" src="Images/image.png"> </a>
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="260px" height="60px" viewBox="0 0 260 60" enable-background="new 0 0 260 60" xml:space="preserve">
 					<path fill-rule="evenodd" clip-rule="evenodd" fill="#FECD0F" d="M19.672,37.1c-2.741,0-5.338-0.623-7.652-1.736  c1.291,0.333,2.638,0.529,4.034,0.529c8.853,0,16.055-7.129,16.055-15.894c0-8.763-7.202-15.893-16.055-15.893  c-2.404,0-4.678,0.541-6.729,1.482c2.906-2.099,6.482-3.342,10.347-3.342c9.707,0,17.605,7.817,17.605,17.428  C37.277,29.283,29.379,37.1,19.672,37.1L19.672,37.1z M12.216,31.987c-1.554,0-3.036-0.302-4.405-0.828  c2.316,1.681,5.159,2.685,8.242,2.685c7.71,0,13.985-6.21,13.985-13.844c0-7.634-6.275-13.845-13.985-13.845  c-2.795,0-5.395,0.825-7.582,2.229c1.182-0.379,2.438-0.587,3.745-0.587c6.737,0,12.216,5.426,12.216,12.095  C24.433,26.559,18.954,31.987,12.216,31.987L12.216,31.987z M5.438,27.346c1.799,1.603,4.171,2.59,6.778,2.59  c5.595,0,10.147-4.507,10.147-10.045c0-5.54-4.553-10.045-10.147-10.045c-3.079,0-5.837,1.369-7.699,3.521  c1.24-0.774,2.702-1.227,4.273-1.227c4.438,0,8.049,3.574,8.049,7.968c0,4.397-3.611,7.97-8.049,7.97  C7.592,28.077,6.459,27.81,5.438,27.346L5.438,27.346z M19.672,0C8.825,0,0,8.825,0,19.674c0,0.047,0.003,0.098,0.003,0.146  C0.003,19.845,0,19.869,0,19.893c0,0.02,0.003,0.037,0.003,0.053c0,0.02-0.003,0.037-0.003,0.057c0,0.111,0.013,0.218,0.015,0.33  c0.009,0.235,0.021,0.468,0.036,0.698c0.026,0.384,0.062,0.765,0.112,1.14c0.043,0.33,0.092,0.657,0.15,0.982  c0.007,0.036,0.012,0.072,0.019,0.109c1.693,9.141,9.717,16.085,19.34,16.085c10.849,0,19.673-8.825,19.673-19.672  C39.346,8.825,30.521,0,19.672,0z"/>
 					<g>
