--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <li><a href="HTML/home.html">HOME </a></li>
               <li><a href="HTML/objective.html" target="_blank"> OBJECTIVE </a></li>
               <li><a href="HTML/authors.html">AUTHOR/S </a></li>
-              <li><a href="http://127.0.0.1:5000/contact">CONTACT </a></li>
+              <li><a href="HTML/contact.html">CONTACT </a></li>
               <li><a href="">APPRECIATION </a></li>
             </ul>
           </div>
