--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -34,7 +34,7 @@
       <div class="contact-info">
         <div> <i class="fas fa-map-marker-alt"></i><a class="link-map" href="https://www.google.com/maps/place/FMCB+-+Faculdade+de+Medicina+e+Ci%C3%AAncias+Biom%C3%A9dicas/@37.0432312,-7.9719514,17.5z/data=!4m8!1m2!2m1!1sualg+campus+de+gambelas!3m4!1s0x0:0x16208f00e7acab03!8m2!3d37.0450599!4d-7.9709448">8005-139 Faro, Gambelas, Portugal</a> </div>
         <div> <i class="fas fa-envelope"></i>Contact directly via mail:  </div>
-        <div> &nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:poly@mail.com"><i class="fa-solid fa-angle-right"></i> poly@mail.com </a> </div>
+        <div> &nbsp&nbsp&nbsp&nbsp<a href="mailto:poly@mail.com"><i class="fa-solid fa-paper-plane"></i>poly@mail.com </a> </div>
         <div> <i class="fa-solid fa-user"></i>Social Media:</div>
         <div> <i class="fa-brands fa-facebook-square"></i><i class="fa-brands fa-twitter-square"></i><i class="fa-brands fa-linkedin"></i></div>
       </div>
